--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     environment:
       MYSQL_DATABASE: tele_bot
       MYSQL_ROOT_PASSWORD: 3nYzRaLtpM4
+    command: ["mysqld", "--character-set-server=utf8", "--collation-server=utf8_general_ci"]
   pma:
     image: nazarpc/phpmyadmin
     ports:
